fix form style and letter spacing in phone number

--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -7,7 +7,7 @@
     padding: 14px 16px;
     border-radius: 40px;
     border: none;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
     color: $form-text-color;
 
     &::placeholder {
@@ -18,13 +18,12 @@
     &--more-space {
       border-radius: 16px;
       height: 148px;
-      min-height: 100px;
-      resize: vertical;
+      resize: none;
     }
   }
 
   &__button {
-    margin-top: 8px;
+    margin-top: 16px;
     width: 100%;
   }
 }
