--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -23,6 +23,7 @@
         font-weight: 700;
         font-size: 12px;
         line-height: 16px;
+        letter-spacing: 2px;
         top: 50%;
         transform: translate(-50%, -50%) scale(0);
         transition: all .5s;
